some spacing issues

--- a/stylesheeten.css
+++ b/stylesheeten.css
@@ -80,12 +80,12 @@ a {
 }
 #secthree {
   padding-top: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 90px;
   background-color: #182E4A;
 }
 #secfour {
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #CE3E3E;
 }
 #sectwo div h1{
